test_regress/t/t_class_local_bad.out
%Error-ENCAPSULATED: t/t_class_local_bad.v:72:18: 'm_loc' is hidden as 'local' within this context (IEEE 1800-2023 8.18)
                                                : ... note: In instance 't'
   72 |     bad(); if (c.m_loc != 2) $stop;
      |                  ^~~~~
                     t/t_class_local_bad.v:72:18: ... Location of definition
   16 |   local int m_loc = 2;
      |             ^~~~~
                     ... For error description see https://verilator.org/warn/ENCAPSULATED?v=latest
%Error-ENCAPSULATED: t/t_class_local_bad.v:73:18: 'm_prot' is hidden as 'protected' within this context (IEEE 1800-2023 8.18)
                                                : ... note: In instance 't'
   73 |     bad(); if (c.m_prot != 20) $stop;
      |                  ^~~~~~
                     t/t_class_local_bad.v:73:18: ... Location of definition
   17 |   protected int m_prot = 3;
      |                 ^~~~~~
%Error-ENCAPSULATED: t/t_class_local_bad.v:75:18: 'm_loc' is hidden as 'local' within this context (IEEE 1800-2023 8.18)
                                                : ... note: In instance 't'
   75 |     bad(); if (e.m_loc != 2) $stop;
      |                  ^~~~~
                     t/t_class_local_bad.v:75:18: ... Location of definition
   16 |   local int m_loc = 2;
      |             ^~~~~
%Error-ENCAPSULATED: t/t_class_local_bad.v:76:18: 'm_prot' is hidden as 'protected' within this context (IEEE 1800-2023 8.18)
                                                : ... note: In instance 't'
   76 |     bad(); if (e.m_prot != 20) $stop;
      |                  ^~~~~~
                     t/t_class_local_bad.v:76:18: ... Location of definition
   17 |   protected int m_prot = 3;
      |                 ^~~~~~
%Error-ENCAPSULATED: t/t_class_local_bad.v:78:14: 'f_loc' is hidden as 'local' within this context (IEEE 1800-2023 8.18)
                                                : ... note: In instance 't'
   78 |     bad(); c.f_loc();
      |              ^~~~~
                     t/t_class_local_bad.v:78:14: ... Location of definition
   19 |   local task f_loc; endtask
      |              ^~~~~
%Error-ENCAPSULATED: t/t_class_local_bad.v:79:14: 'f_prot' is hidden as 'protected' within this context (IEEE 1800-2023 8.18)
                                                : ... note: In instance 't'
   79 |     bad(); c.f_prot();
      |              ^~~~~~
                     t/t_class_local_bad.v:79:14: ... Location of definition
   20 |   protected task f_prot; endtask
      |                  ^~~~~~
%Error-ENCAPSULATED: t/t_class_local_bad.v:81:14: 's_loc' is hidden as 'local' within this context (IEEE 1800-2023 8.18)
                                                : ... note: In instance 't'
   81 |     bad(); c.s_loc();
      |              ^~~~~
                     t/t_class_local_bad.v:81:14: ... Location of definition
   22 |   static local task s_loc; endtask
      |                     ^~~~~
%Error-ENCAPSULATED: t/t_class_local_bad.v:82:14: 's_prot' is hidden as 'protected' within this context (IEEE 1800-2023 8.18)
                                                : ... note: In instance 't'
   82 |     bad(); c.s_prot();
      |              ^~~~~~
                     t/t_class_local_bad.v:82:14: ... Location of definition
   23 |   static protected task s_prot; endtask
      |                         ^~~~~~
%Error-ENCAPSULATED: t/t_class_local_bad.v:84:17: 's_loc' is hidden as 'local' within this context (IEEE 1800-2023 8.18)
                                                : ... note: In instance 't'
   84 |     bad(); Cls::s_loc();
      |                 ^~~~~
                     t/t_class_local_bad.v:84:17: ... Location of definition
   22 |   static local task s_loc; endtask
      |                     ^~~~~
%Error-ENCAPSULATED: t/t_class_local_bad.v:85:17: 's_prot' is hidden as 'protected' within this context (IEEE 1800-2023 8.18)
                                                : ... note: In instance 't'
   85 |     bad(); Cls::s_prot();
      |                 ^~~~~~
                     t/t_class_local_bad.v:85:17: ... Location of definition
   23 |   static protected task s_prot; endtask
      |                         ^~~~~~
%Error-ENCAPSULATED: t/t_class_local_bad.v:48:16: 'm_loc' is hidden as 'local' within this context (IEEE 1800-2023 8.18)
                                                : ... note: In instance 't'
   48 |     bad(); if (m_loc != 10) $stop;
      |                ^~~~~
                     t/t_class_local_bad.v:48:16: ... Location of definition
   16 |   local int m_loc = 2;
      |             ^~~~~
%Error-ENCAPSULATED: t/t_class_local_bad.v:51:12: 'f_loc' is hidden as 'local' within this context (IEEE 1800-2023 8.18)
                                                : ... note: In instance 't'
   51 |     bad(); f_loc();
      |            ^~~~~
                     t/t_class_local_bad.v:51:12: ... Location of definition
   19 |   local task f_loc; endtask
      |              ^~~~~
%Error-ENCAPSULATED: t/t_class_local_bad.v:54:14: 'f_loc' is hidden as 'local' within this context (IEEE 1800-2023 8.18)
                                                : ... note: In instance 't'
   54 |     bad(); o.f_loc();
      |              ^~~~~
                     t/t_class_local_bad.v:54:14: ... Location of definition
   19 |   local task f_loc; endtask
      |              ^~~~~
%Error-ENCAPSULATED: t/t_class_local_bad.v:57:12: 's_loc' is hidden as 'local' within this context (IEEE 1800-2023 8.18)
                                                : ... note: In instance 't'
   57 |     bad(); s_loc();
      |            ^~~~~
                     t/t_class_local_bad.v:57:12: ... Location of definition
   22 |   static local task s_loc; endtask
      |                     ^~~~~
%Error-ENCAPSULATED: t/t_class_local_bad.v:60:17: 's_loc' is hidden as 'local' within this context (IEEE 1800-2023 8.18)
                                                : ... note: In instance 't'
   60 |     bad(); Cls::s_loc();
      |                 ^~~~~
                     t/t_class_local_bad.v:60:17: ... Location of definition
   22 |   static local task s_loc; endtask
      |                     ^~~~~
%Error: Exiting due to
